@@ -85,6 +85,11 @@ void main()
       c.rgb = exp( texture3D(lut, scale * c.rgb + offset ).rgb ); 
     }
 
+  if ( unpremult && c.a > 0.00001 )
+  {
+      c.rgb /= c.a;
+  }
+
   //
   // Apply video gamma correction.
   // 
@@ -144,6 +149,11 @@ void main()
       c.g = 0.0f;
       c.b = 0.0f;
       c.a = 0.0f;
+  }
+
+  if ( premult )
+  {
+      c.rgb *= c.a;
   }
 
 
